--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,9 +4,8 @@
 
 - clean: ['~']
 
-# - link:
-#    ~/.tmux.conf: tmux.conf
-#    ~/.vim: vim
+- link:
+    ~/.zshrc: zshrc
 #    ~/.vimrc: vimrc
 
 - create:
@@ -15,4 +14,3 @@
 
 # - shell:
 #  - [git submodule update --init --recursive, Installing submodules]
-
