chore: add gitconfig to dotbot

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,11 +6,11 @@
 
 - link:
     ~/.zshrc: zshrc
+    ~/.gitconfig: gitconfig
 #    ~/.vimrc: vimrc
 
 - create:
    -  ~/Work
-
 
 # - shell:
 #  - [git submodule update --init --recursive, Installing submodules]
