--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,5 +12,8 @@
 - create:
    -  ~/Work
 
-# - shell:
-#  - [git submodule update --init --recursive, Installing submodules]
+- shell:
+   -
+    command: ./setup_homebrew.zsh
+    stdout: true
+    stderr: true
