feat: add config file for bat and symlink with dotbot

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,9 @@
     ~/.zshrc: zshrc
     ~/.gitconfig: gitconfig
 #    ~/.vimrc: vimrc
+    ~/.config/bat:
+      create: true
+      path: config/bat
 
 - create:
    -  ~/Work
