--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,3 +21,8 @@
     command: ./setup_homebrew.zsh
     stdout: true
     stderr: true
+   -
+    command: ./setup_zsh.zsh
+    stdout: true
+    stderr: true
+
