feat: add zplug as zsh plugin manager

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,9 @@
     ~/.zshrc: zshrc
     ~/.zshenv: zshenv
     ~/.gitconfig: gitconfig
+    ~/.zplug:
+      create: true
+      path: zplug
     ~/.config/bat:
       create: true
       path: config/bat
