feat: add new zsh plugin

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,9 @@
     ~/.zplug:
       create: true
       path: zplug
+    ~/.tmux:
+      create: true
+      path: tmux
     ~/.config/bat:
       create: true
       path: config/bat
